syntax = "proto3";
package taskflow.proto;

import "google/protobuf/struct.proto";

option java_package = "cn.feiliu.taskflow.proto";
option java_outer_classname = "JsonMapPb";

message JsonValue {
  // The kind of value.
  oneof kind {
    // Represents a null value.
    google.protobuf.NullValue null_value = 1;

    // Represents an int32 value.
    int32 int_value = 2;

    // Represents an int64 value.
    int64 long_value = 3;

    // Represents a double value.
    double double_value = 4;

    // Represents a string value.
    string string_value = 5;

    // Represents a boolean value.
    bool bool_value = 6;

    // Represents a structured value.
    JsonMap struct_value = 7;

    // Represents a repeated `Value`.
    JsonList list_value = 8;
  }
}

message JsonList {
  // Repeated field of dynamically typed values.
  repeated JsonValue values = 1;
}

message JsonMap {
  // Unordered map of dynamically typed values.
  map<string, JsonValue> fields = 1;
}